@@ -1,3 +1,7 @@
+[B]Version 2.6.3[/B]
+
+- added search
+
 [B]Version 2.6.2[/B]
 
 - updated addon settings for compatability with xbmc4xbox
